Fix overlapping events on week view.

--- a/openscholar/themes/os_basetheme/css/global.base.css
+++ b/openscholar/themes/os_basetheme/css/global.base.css
@@ -426,6 +426,11 @@ ul ul ul ul {
     margin:20px 0 0 0;
 }
 
+.calendar-calendar .week-view div.single-day .view-item {
+  position: relative;
+  float: left;
+}
+
 .view-os-events .field-items{
     display: inline-block;
 }
